examples/failing/MutRec2.purs
-- @shouldFailWith CycleInDeclaration
module Main where

import Prelude

x = x
